logs/arxiv_pipeline/s3_to_redshift/2019-07-01T23:42:57.006241+00:00/1.log
[2019-07-01 16:47:19,897] {__init__.py:1139} INFO - Dependencies all met for <TaskInstance: arxiv_pipeline.s3_to_redshift 2019-07-01T23:42:57.006241+00:00 [queued]>
[2019-07-01 16:47:19,905] {__init__.py:1139} INFO - Dependencies all met for <TaskInstance: arxiv_pipeline.s3_to_redshift 2019-07-01T23:42:57.006241+00:00 [queued]>
[2019-07-01 16:47:19,906] {__init__.py:1353} INFO - 
--------------------------------------------------------------------------------
[2019-07-01 16:47:19,906] {__init__.py:1354} INFO - Starting attempt 1 of 2
[2019-07-01 16:47:19,906] {__init__.py:1355} INFO - 
--------------------------------------------------------------------------------
[2019-07-01 16:47:19,914] {__init__.py:1374} INFO - Executing <Task(PythonOperator): s3_to_redshift> on 2019-07-01T23:42:57.006241+00:00
[2019-07-01 16:47:19,914] {base_task_runner.py:119} INFO - Running: ['airflow', 'run', 'arxiv_pipeline', 's3_to_redshift', '2019-07-01T23:42:57.006241+00:00', '--job_id', '6', '--raw', '-sd', 'DAGS_FOLDER/load.py', '--cfg_path', '/tmp/tmpr6qcbyz6']
[2019-07-01 16:47:20,510] {base_task_runner.py:101} INFO - Job 6: Subtask s3_to_redshift [2019-07-01 16:47:20,509] {__init__.py:51} INFO - Using executor SequentialExecutor
[2019-07-01 16:47:20,737] {base_task_runner.py:101} INFO - Job 6: Subtask s3_to_redshift [2019-07-01 16:47:20,737] {__init__.py:305} INFO - Filling up the DagBag from /home/kent/airflow/dags/load.py
[2019-07-01 16:47:20,997] {base_task_runner.py:101} INFO - Job 6: Subtask s3_to_redshift [2019-07-01 16:47:20,997] {cli.py:517} INFO - Running <TaskInstance: arxiv_pipeline.s3_to_redshift 2019-07-01T23:42:57.006241+00:00 [running]> on host Aspire-E5-572G
[2019-07-01 16:47:21,007] {python_operator.py:104} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_ID=arxiv_pipeline
AIRFLOW_CTX_TASK_ID=s3_to_redshift
AIRFLOW_CTX_EXECUTION_DATE=2019-07-01T23:42:57.006241+00:00
AIRFLOW_CTX_DAG_RUN_ID=manual__2019-07-01T23:42:57.006241+00:00
[2019-07-01 16:47:21,898] {__init__.py:1580} ERROR - syntax error at or near "csv"
LINE 1: ..._access_key=w6J4MD5vQ7XopM6d1fLGFM1gu8exyVUZyZzTlY/O'; csv; 
                                                                  ^
Traceback (most recent call last):
  File "/home/kent/.local/lib/python3.6/site-packages/airflow/models/__init__.py", line 1441, in _run_raw_task
    result = task_copy.execute(context=context)
  File "/home/kent/.local/lib/python3.6/site-packages/airflow/operators/python_operator.py", line 112, in execute
    return_value = self.execute_callable()
  File "/home/kent/.local/lib/python3.6/site-packages/airflow/operators/python_operator.py", line 117, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/home/kent/airflow/dags/load.py", line 63, in s3_to_redshift
    cursor.execute(create_staging_table)
psycopg2.errors.SyntaxError: syntax error at or near "csv"
LINE 1: ..._access_key=w6J4MD5vQ7XopM6d1fLGFM1gu8exyVUZyZzTlY/O'; csv; 
                                                                  ^

[2019-07-01 16:47:21,902] {__init__.py:1603} INFO - Marking task as UP_FOR_RETRY
[2019-07-01 16:47:21,928] {base_task_runner.py:101} INFO - Job 6: Subtask s3_to_redshift Traceback (most recent call last):
[2019-07-01 16:47:21,928] {base_task_runner.py:101} INFO - Job 6: Subtask s3_to_redshift   File "/home/kent/.local/bin/airflow", line 32, in <module>
[2019-07-01 16:47:21,928] {base_task_runner.py:101} INFO - Job 6: Subtask s3_to_redshift     args.func(args)
[2019-07-01 16:47:21,928] {base_task_runner.py:101} INFO - Job 6: Subtask s3_to_redshift   File "/home/kent/.local/lib/python3.6/site-packages/airflow/utils/cli.py", line 74, in wrapper
[2019-07-01 16:47:21,928] {base_task_runner.py:101} INFO - Job 6: Subtask s3_to_redshift     return f(*args, **kwargs)
[2019-07-01 16:47:21,928] {base_task_runner.py:101} INFO - Job 6: Subtask s3_to_redshift   File "/home/kent/.local/lib/python3.6/site-packages/airflow/bin/cli.py", line 523, in run
[2019-07-01 16:47:21,928] {base_task_runner.py:101} INFO - Job 6: Subtask s3_to_redshift     _run(args, dag, ti)
[2019-07-01 16:47:21,928] {base_task_runner.py:101} INFO - Job 6: Subtask s3_to_redshift   File "/home/kent/.local/lib/python3.6/site-packages/airflow/bin/cli.py", line 442, in _run
[2019-07-01 16:47:21,928] {base_task_runner.py:101} INFO - Job 6: Subtask s3_to_redshift     pool=args.pool,
[2019-07-01 16:47:21,928] {base_task_runner.py:101} INFO - Job 6: Subtask s3_to_redshift   File "/home/kent/.local/lib/python3.6/site-packages/airflow/utils/db.py", line 73, in wrapper
[2019-07-01 16:47:21,928] {base_task_runner.py:101} INFO - Job 6: Subtask s3_to_redshift     return func(*args, **kwargs)
[2019-07-01 16:47:21,928] {base_task_runner.py:101} INFO - Job 6: Subtask s3_to_redshift   File "/home/kent/.local/lib/python3.6/site-packages/airflow/models/__init__.py", line 1441, in _run_raw_task
[2019-07-01 16:47:21,929] {base_task_runner.py:101} INFO - Job 6: Subtask s3_to_redshift     result = task_copy.execute(context=context)
[2019-07-01 16:47:21,929] {base_task_runner.py:101} INFO - Job 6: Subtask s3_to_redshift   File "/home/kent/.local/lib/python3.6/site-packages/airflow/operators/python_operator.py", line 112, in execute
[2019-07-01 16:47:21,929] {base_task_runner.py:101} INFO - Job 6: Subtask s3_to_redshift     return_value = self.execute_callable()
[2019-07-01 16:47:21,929] {base_task_runner.py:101} INFO - Job 6: Subtask s3_to_redshift   File "/home/kent/.local/lib/python3.6/site-packages/airflow/operators/python_operator.py", line 117, in execute_callable
[2019-07-01 16:47:21,929] {base_task_runner.py:101} INFO - Job 6: Subtask s3_to_redshift     return self.python_callable(*self.op_args, **self.op_kwargs)
[2019-07-01 16:47:21,929] {base_task_runner.py:101} INFO - Job 6: Subtask s3_to_redshift   File "/home/kent/airflow/dags/load.py", line 63, in s3_to_redshift
[2019-07-01 16:47:21,929] {base_task_runner.py:101} INFO - Job 6: Subtask s3_to_redshift     cursor.execute(create_staging_table)
[2019-07-01 16:47:21,929] {base_task_runner.py:101} INFO - Job 6: Subtask s3_to_redshift psycopg2.errors.SyntaxError: syntax error at or near "csv"
[2019-07-01 16:47:21,929] {base_task_runner.py:101} INFO - Job 6: Subtask s3_to_redshift LINE 1: ..._access_key=w6J4MD5vQ7XopM6d1fLGFM1gu8exyVUZyZzTlY/O'; csv; 
[2019-07-01 16:47:21,929] {base_task_runner.py:101} INFO - Job 6: Subtask s3_to_redshift                                                                   ^
[2019-07-01 16:47:21,929] {base_task_runner.py:101} INFO - Job 6: Subtask s3_to_redshift 
[2019-07-01 16:47:24,900] {logging_mixin.py:95} INFO - [2019-07-01 16:47:24,898] {jobs.py:2562} INFO - Task exited with return code 1
